--- a/contact.html
+++ b/contact.html
@@ -169,5 +169,11 @@
                 </div>
         </div>
 </body>
-
+<script>
+                fetch("footer.html")
+            .then(response => response.text())
+            .then(data => {
+                document.body.insertAdjacentHTML("beforeend", data);
+            });
+</script>
 </html>
