--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="team.html">Team</a></li>
-                <li><a href="pastevent.html">Past Event</a></li>
+                <li><a href="pastevent.html">Past Events</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="guidelines.html">Guidelines</a></li>
                 <li><a href="brochure.pdf">Brochure</a></li>
