--- a/aboutus.html
+++ b/aboutus.html
@@ -76,6 +76,7 @@
                 <li><a href="pastevent.html">Past Event</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="guidelines.html">Guidelines</a></li>
+                <li><a href="brochure.pdf">Brochure</a></li>
             </ul>
             <div class="menu-btn">☰</div>
         </nav>
