--- a/ticket/register.html
+++ b/ticket/register.html
@@ -37,7 +37,7 @@
         <input type="email" id="email" name="email" placeholder="Enter your email ID" required />
       </div>
 
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="ticket">Ticket Amount:</label>
         <select id="ticket" name="ticket" required>
           <option value="" disabled selected>Select ticket type</option>
@@ -45,7 +45,7 @@
           <option value="3 Ticket - ₹1335">3 Ticket - ₹1335</option>
           <option value="5 Ticket - ₹2102">5 Ticket - ₹2102</option>
         </select>
-      </div>
+      </div> -->
 
       <!-- Submit button -->
       <button type="submit" class="pay-btn">Register</button>
