--- a/index.html
+++ b/index.html
@@ -109,6 +109,24 @@
             </p>
           </div>
         </div>
+        <div class="theme-box">
+          <div class="theme-card">
+            <h2 class="theme">THEME <div>Threads Of Identity</div></h2>
+            <p>
+              Like a horizon over the sea, identity expands and transforms with
+              time. TEDxMITWPU seeks to uncover hidden facets of selfhood, forging
+              new connections and discoveries.
+          </p>
+          <p>
+              Balancing our many selves is never easy, yet it is through this very
+              act that we embark on a profound journey of self-discovery.
+          </p>
+          <p>
+              Identity may never be fully defined—but isn't that the beauty of
+              unravelling it?
+          </p>
+          </div>
+          </div>
         <div class="speakers-container">
             <!-- Speaker 1 -->
             <div class="speaker-card">
