--- a/footer.html
+++ b/footer.html
@@ -29,7 +29,7 @@
     }
 
     .footer-col {
-        flex: 1;
+        flex: flex;
         min-width: 200px;
         padding: 10px;
         box-sizing: border-box;
@@ -66,6 +66,7 @@
         flex-direction: row;
         gap: 25px;
         flex-wrap: nowrap;
+        margin-left: 300px;
     }
 
     .footer-links li {
@@ -87,7 +88,7 @@
     }
 
     .instagram-col {
-        display: 2;
+        display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
