--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </p>
           </div>
           <!-- Know more button moved outside the card -->
-          <div class="btn-container btn2-container">
+          <div class="btn-container btn2-container desktop-btn">
               <button class="btn btn2"onclick="window.location.href='aboutus.html'">Know More</button>
             </div>
         </div>
@@ -134,6 +134,10 @@
               MIT World Peace University envisions a world shaped by tradition, innovation, and peace.
               TEDx fosters change through ideas that inspire, transform and change
             </p>
+          </div>
+          <div class="btn-container btn2-container mobile-btn">
+            <button class="btn btn2" onclick="window.location.href='aboutus.html'">Know More</button>
+          </div>
           </div>
         </div>
         <div class="theme-box">
