--- a/guidelines.html
+++ b/guidelines.html
@@ -273,6 +273,9 @@ footer {
 
 /* Responsive Design */
 @media (max-width: 768px) {
+    header{
+        width:100%
+    }
     .footer-row {
         flex-direction: column;
         text-align: center;
@@ -303,6 +306,84 @@ footer {
   .nav-links li a:hover {
     color: #ff2b06;
   }
+  @media screen and (max-width: 768px) {
+  .guidelines-box {
+    padding: 20px !important;
+    margin: 20px 10px !important;
+    width: auto !important;
+  }
+
+  .guidelines-box ol {
+    padding-left: 15px;
+  }
+
+  .guidelines-box li {
+    font-size: 16px;
+  }
+
+  }
+  @media screen and (max-width: 768px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #121212;
+    padding: 10px 20px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+
+  .nav-left {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between; /* Makes logo on left, button on right */
+  }
+
+  .menu-btn {
+    display: block;
+    font-size: 28px;
+    color: white;
+    cursor: pointer;
+  }
+
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: #121212;
+    padding-bottom: 20px;
+  }
+
+  .nav-links.active {
+    display: flex;
+  }
+
+  .nav-links li {
+    margin: 10px 0;
+  }
+
+  .nav-links li a {
+    color: white;
+    padding: 10px 0;
+    text-decoration: none;
+    position: relative;
+  }
+
+  .nav-links li a.active::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: red; /* underline color */
+  }
+}
+
     </style>
 </head>
 
@@ -427,5 +508,24 @@ footer {
             link.classList.add("active");
           }
         });
+        
+        
+  const menuBtn = document.querySelector(".menu-btn");
+  const navLinks = document.querySelector(".nav-links");
+
+  menuBtn.addEventListener("click", () => {
+    navLinks.classList.toggle("active");
+  });
+
+  window.addEventListener("resize", () => {
+    if (window.innerWidth > 768) {
+      navLinks.classList.remove("active");
+      navLinks.style.display = "flex";
+    } else {
+      navLinks.style.display = "";
+    }
+  });
+
+
     </script>
 </html>
