--- a/footer.html
+++ b/footer.html
@@ -1,137 +1,10 @@
-<style>
-footer {
-        margin: 0px;
-        padding: 2px;
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-        background: #1a1a1a;
-        color: #fff;
-        padding: 15px 0;
-        font-size: 16px;
-    }
 
-    .team-crew {
-        margin-bottom: 80px;
-    }
-
-    .footer-container {
-        width: 85%;
-        margin: 0px;
-        padding: 6px;
-    }
-
-    .footer-row {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        flex-wrap: wrap;
-    }
-
-    .footer-col {
-        flex: flex;
-        min-width: 200px;
-        padding: 10px;
-        box-sizing: border-box;
-    }
-
-    .logo-col {
-        text-align: left;
-    }
-
-    .footer-logo {
-        width: 150px;
-        height: auto;
-        margin-bottom: 8px;
-    }
-
-    .footer-desc {
-        font-size: 13px;
-        color: #bbb;
-        max-width: 250px;
-    }
-
-    .links-col {
-        flex: 1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .footer-links {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: flex;
-        flex-direction: row;
-        gap: 25px;
-        flex-wrap: nowrap;
-        margin-left: 300px;
-    }
-
-    .footer-links li {
-        display: inline-block;
-        white-space: nowrap;
-    }
-
-    .footer-links a {
-        color: #fff;
-        text-decoration: none;
-        font-size: 17px;
-        font-weight: 600;
-        transition: color 0.3s ease;
-        white-space: nowrap;
-    }
-
-    .footer-links a:hover {
-        color: #f44336;
-    }
-
-    .instagram-col {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-top: 4px;
-    }
-
-    .instagram-text {
-        font-size: 16px;
-        color: #fff;
-        margin-bottom: 10px;
-    }
-
-    .instagram-icons {
-        display: flex;
-        gap: 10px;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .instagram-link {
-        text-decoration: none;
-        display: inline-block;
-        color: #fff;
-    }
-
-    .instagram-logo {
-        width: 24px;
-        height: 24px;
-        margin-top: 5px;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .instagram-link:hover .instagram-logo {
-        transform: scale(1.1);
-    }
-</style>
 
 <footer>
     <div class="footer-container">
         <div class="footer-row">
             <!-- Left Column: Logo & Description -->
+             
             <div class="footer-col logo-col">
                 <img src="images/tedxlogowhite.png" alt="TEDxMITWPU Logo" class="footer-logo">
                 <p class="footer-desc">TEDxMITWPU brings inspiring ideas to life, fostering meaningful conversations.</p>
@@ -142,10 +15,10 @@ footer {
                 <p class="instagram-text">Follow Us On</p>
                 <div class="instagram-icons">
                     <a href="https://www.instagram.com/TedxMITWPU" target="_blank" class="instagram-link">
-                        <img src="images/instagram-icon.png" alt="Instagram" class="instagram-logo">
+                        <img src="images/instagram1.svg" alt="Instagram" class="instagram-logo">
                     </a>
                     <a href="https://www.linkedin.com/company/tedxmitwpu" target="_blank" class="instagram-link">
-                        <img src="images/linkedin3.webp" alt="LinkedIn" class="instagram-logo">
+                        <img src="images/linkedin2.svg" alt="LinkedIn" class="instagram-logo">
                     </a>
                 </div>
             </div>
