--- a/team.html
+++ b/team.html
@@ -481,60 +481,159 @@
         gap: 15px;
     }
 }
+footer {
+        margin: 0px;
+        padding: 2px;
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        background: #1a1a1a;
+        color: #fff;
+        padding: 15px 0;
+        font-size: 16px;
+    }
+
+    .team-crew {
+        margin-bottom: 80px;
+    }
+
+    .footer-container {
+        width: 80%;
+        margin: 0px;
+        padding: 6px;
+    }
+
+    .footer-row {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-wrap: wrap;
+    }
+
+    .footer-col {
+        flex: flex;
+        min-width: 200px;
+        padding: 10px;
+        box-sizing: border-box;
+    }
+
+    .logo-col {
+        text-align: left;
+    }
+
+    .footer-logo {
+        width: 150px;
+        height: auto;
+        margin-bottom: 8px;
+    }
+
+    .footer-desc {
+        font-size: 13px;
+        color: #bbb;
+        max-width: 250px;
+    }
+
+    .links-col {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer-links {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-direction: row;
+        gap: 25px;
+        flex-wrap: nowrap;
+        margin-left: 300px;
+    }
+
+    .footer-links li {
+        display: inline-block;
+        white-space: nowrap;
+    }
+
+    .footer-links a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 17px;
+        font-weight: 600;
+        transition: color 0.3s ease;
+        white-space: nowrap;
+    }
+
+    .footer-links a:hover {
+        color: #f44336;
+    }
+
+    .instagram-col {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: 4px;
+    }
+
+    .instagram-text {
+        font-size: 16px;
+        color: #fff;
+        margin-bottom: 10px;
+    }
+
+    .instagram-icons {
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .instagram-link {
+        text-decoration: none;
+        display: inline-block;
+        color: #fff;
+    }
+
+    .instagram-logo {
+        width: 24px;
+        height: 24px;
+        margin-top: 5px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .instagram-link:hover .instagram-logo {
+        transform: scale(1.1);
+    }
+
 @media (max-width: 768px) {
-  .footer-row {
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-  }
-  
-  .logo-col {
-      text-align: center;
-  }
-  
-  .footer-desc {
-      margin: 0 auto;
-  }
-  
-  .links-col {
-      width: 100%;
-      overflow-x: auto;
-      padding-bottom: 10px;
-      justify-content: flex-start;
+  .logo-col,.instagram-col{
+    position: relative;
+    left:50px;
   }
   
   .footer-links {
-      width: max-content;
-      padding: 0 15px;
-      gap: 15px;
+    padding-top: 4px;
+    position: relative;
+    right:50%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 columns on mobile */
+    gap: 14px; /* Spacing between grid items */
+    justify-items: start; /* Align links to the left */
   }
+
   
-  /* Hide scrollbar but keep functionality */
-  .links-col::-webkit-scrollbar {
-      display: none;
-  }
-  
-  .links-col {
-      -ms-overflow-style: none;  /* IE and Edge */
-      scrollbar-width: none;  /* Firefox */
-  }
-  
-  .instagram-col {
-      margin-top: 15px;
+
+  .footer-links a {
+    /* justify-items: flex-start; */
+    font-size: 14px; /* Adjust font size for smaller screens */
   }
 }
 
-/* Small mobile devices */
-@media (max-width: 480px) {
-  .footer-links {
-      gap: 12px;
-      padding: 0 10px;
-  }
-  
-  .footer-links a {
-      font-size: 15px;
-  }
-}
+
 
     </style>
   </head>
