--- a/guidelines.html
+++ b/guidelines.html
@@ -196,6 +196,7 @@ footer {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    /* width: 100%; */
 }
 
 /* Left Column (Logo & Description) */
